# RagTemplate

./: .gitignore  LICENCE  README.md  buscar_documentos.py  config.example.toml  db_vectorial.py  gestionar_archivos.py  main.py  ollama_conection.py  ollama_connection.py  procesar_documentos.py  pyproject.toml  requeriments.txt
